--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apprehensive-candid-pelican",
+  "name": "4314-assignment",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
